# agents

./: .gitignore  Makefile  README.md  pyproject.toml
src/agents/: base.py  dummy.py
src/agents/chat/: agent.py
src/agents/dummy/: agent.py
src/agents/first/: agent.py
src/agents/supporter/: README.md  agent.py  forex.py  prompt.py  weather.py
src/agents/supporter/forex/: agent.py  mocks.py  prompt.py
src/agents/supporter/orchestrator/: agent.py  prompt.py  tools.py
src/agents/supporter/weather/: agent.py  mocks.py  prompt.py
src/assessment/: questions.py  schemas.py
src/clients/: openai.py
src/domain/: agent.py  entities.py
src/infra/: logger.py
src/infra/cache/: dialogs.py
src/ui/: configs.py  main.py
src/ui/pages/: 1_dialog.py  2_assessment.py  README.md
