[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["Artem Khokhlov <god.bless.data.science@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
openai = "^1.97.0"
langchain = "^0.3.26"
python-dotenv = "^1.1.1"
evidently = "^0.7.11"

[tool.poetry.dev-dependencies]
notebook = "^7.4.4"
streamlit = "^1.47.0"
ruff = "^0.12.4"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
